# freeflume-linux-qt6

./: .gitignore  CMakeLists.txt  README.md  com.velkadyne.FreeFlume.flatpakref  freeflume.flatpakrepo  freeflume.gpg  index.html
doc/: BUILD.md
docs/: channel-pagination-fix.md  multiaudio-and-shorts-changes.md
packaging/: org.freeflume.Desktop.desktop
packaging/appimage/: AppRun  Containerfile  build-appimage.sh
packaging/flatpak/: README.md  build-repo.sh  com.velkadyne.FreeFlume.metainfo.xml  com.velkadyne.FreeFlume.yml  publish-repo.sh  release.sh
packaging/icons/: freeflume.qrc
repo/: summary  summary.idx  summary.sig
repo/delta-indexes/5O/: jiGGcw1bCJxGNdSs_0na7Hc2bRdtfx0u+Ti7hqBnk.index
repo/delta-indexes/8Q/: ukbdHsJhO8b2jdU_noJYHFFL1LUghTcHELjw1dd3M.index
repo/delta-indexes/L2/: JyPF49p9wM81Pe4PaSGjt6HfvgenKZZmLCtl4fvH4.index
repo/delta-indexes/Rp/: 2Gzc12JfGNM4jsj7hBiL5rhqEcjYsdAzFRa8OkwaM.index
repo/summaries/: 0958bf425adf4e84b782d2c3e0e6ed02e5efea750d3d38b09b0145fc7b4be99f-05fc57de5ff38f68d4b27ea59a35dfd32fd7247a627f3221cb49b40b42d63cf6.delta  14204023e1e08a1e2fc1fbd804edeac69bd12092695c457013910b7f70694fae-05fc57de5ff38f68d4b27ea59a35dfd32fd7247a627f3221cb49b40b42d63cf6.delta  1d8f744192fcef2c292024ef26c275107c1d3329400eeb0c5a7b57bb88ac781c-05fc57de5ff38f68d4b27ea59a35dfd32fd7247a627f3221cb49b40b42d63cf6.delta  5c314f374d12af222af90bcbd9bd0c09da8d75d47cd4dbd64085df479e070cda-05fc57de5ff38f68d4b27ea59a35dfd32fd7247a627f3221cb49b40b42d63cf6.delta  89f6d2ebd39103af895f1ccc6edf240fb8ee1d35d2b1416917084f7b58d17b98-05fc57de5ff38f68d4b27ea59a35dfd32fd7247a627f3221cb49b40b42d63cf6.delta
src/: apppaths.h  database.cpp  database.h  depcheck.cpp  depcheck.h  detailpane.cpp  detailpane.h  downloadmanager.cpp  downloadmanager.h  downloadmenu.h  downloadspage.cpp  downloadspage.h  extractor.cpp  extractor.h  historypage.cpp  historypage.h  hoverreveal.h  htmlutil.h  idleinhibitor.cpp  idleinhibitor.h  listcontextmenu.h  main.cpp  mainwindow.cpp  mainwindow.h  metaenricher.cpp  metaenricher.h  mpvwidget.cpp  mpvwidget.h  playerpage.cpp  playerpage.h  playlistmenu.h  playlistspage.cpp  playlistspage.h  reorderlistwidget.h  searchpage.cpp  searchpage.h  seekslider.cpp  seekslider.h  settingspage.cpp  settingspage.h  (+19 more)
(+28 files in other folders)
